fixed nav text spacing

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 748px) {
+@media only screen and (max-width: 1080px) {
   /*NAVBAR */  
  
   .menu {
@@ -67,145 +67,9 @@
     background: black;
     width: 100%;
     height: calc((100vh - 4rem)/7);
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  /* navbar icon animation */
-  
-  .image {
-    position: absolute;
-    right: 1rem;
-    width: 6vw;
-    height: 6vh;
-    margin: 1rem;
-    cursor: pointer;
-  }
-  
-  .image span {
-      margin: 0 auto;
-      position: relative;
-      top: 12px;
-      transition: transform 1s ease;
-  }
-  
-  .image span:before, .image span:after {
-      position: absolute;
-      content: '';
-  }
-  
-  .image span, .image span:before, .image span:after {
-      width: 31px;
-      height: 6px;
-      background-color: #ffffff;
-      display: block;
-  }
-  
-  .image span:before {
-    margin-top: -12px;
-    transition: transform 1s ease;
-    transform-origin: 50% 50%;
-  }
-  
-  .image span:after {
-    margin-top: 12px;
-    transition: transform 1s ease;
-    transform-origin: 50% 50%;
-  }
-  
-  .image-open span {
-    transform: scaleX(1.5);
-    transform: scaleY(0.7);
-  }
-  
-  .image-open span:after {
-    transform: translateX(-2px) rotate(45deg);
-  }
-  
-  .image-open span:before {
-    transform: translateX(-2px) rotate(-45deg);
-  }
-
-  /* HOME PAGE */
-
-  .top-ten-li {
-    padding: 0.5rem 0rem;
-}
-
-}
-
-@media only screen and (min-width: 749px) and (max-width: 1080px) {
-
-  .menu {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    top: 4rem;
-    /* overflow-y: auto; */
-  }
-
-  #logo-nav {
-    margin: 0.5rem;
-    height: 3rem;
-    padding-left: 1.5rem;
-  }
-  
-  #name-nav {
-  display: none;
-  }
-
-  /* Menu animation, sliding drawers effect(coined?) */
-  .menu label {
-    width: 100%;
-    position: absolute;
-    transition: transform 0.5s cubic-bezier(0, 0.52, 0, 1);
-    border: 1px solid white;
-  }
-  .menu :nth-child(1) {
-    
-  }
-  .menu :nth-child(2){
-    top: calc((100vh - 4rem)/7);
-    transition-delay: 0.1s
-  }
-  .menu :nth-child(3) {
-    top: calc(2*(100vh - 4rem)/7);
-    transition-delay: 0.2s
-  }
-  .menu :nth-child(4){
-    top: calc(3*(100vh - 4rem)/7);
-    transition-delay: 0.3s
-  }
-  .menu :nth-child(5){
-    top: calc(4*(100vh - 4rem)/7);
-    transition-delay: 0.4s
-  }
-  .menu :nth-child(6){
-    top: calc(5*(100vh - 4rem)/7);
-    transition-delay: 0.5s
-  }
-  .menu :nth-child(7){
-    top: calc(6*(100vh - 4rem)/7);
-    transition-delay: 0.6s
-  }
-
-  .menu-closed > label {
-    transform: translate3d(110vw, 0, 0);
-  }
-  
-  .menu-open > label {
-    transform: translate3d(0vw, 0, 0);
-  }
-  
-  .nav-link {
-    
-    font-size: 1.5em;
-    color: white;
-    background: black;
-    padding: 2rem 4rem;
-    width:100%;
-    height: 100vh;
+    line-height: calc((100vh - 4rem)/7);
+    vertical-align:middle;
+    padding: 4rem;
     text-decoration: none;
     display: flex;
     flex-direction: column;
@@ -268,6 +132,24 @@
     transform: translateX(-2px) rotate(-45deg);
   }
 
+}
+
+@media only screen and (min-width: 749px) and (max-width: 1080px) {
+
+
+  #logo-nav {
+    margin: 0.5rem;
+    height: 3rem;
+    padding-left: 1.5rem;
+  }
+  
+  #name-nav {
+  display: none;
+  }
+
+ 
+ 
+ 
 }
 
 @media only screen and (min-width: 1081px) {
